--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "nodemailer": "^6.6.3",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "otp-generator": "^2.0.1",
+    "otp-without-db": "^1.0.4"
   }
 }
