--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
     "otp-generator": "^2.0.1",
-    "otp-without-db": "^1.0.4"
+    "otp-without-db": "^1.0.4",
+    "uuid": "^8.3.2"
   }
 }
