--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app",
     "api": "nodemon app",
     "view": "npm start --prefix view",
-    "dev": "concurrently \"npm run api\" \"npm run view\""
+    "dev": "concurrently \"npm run api\" \"npm run view\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix view && npm run build --prefix view"
   },
   "keywords": [],
   "author": "",
