--- a/view/package.json
+++ b/view/package.json
@@ -12,10 +12,13 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "moment-timezone": "^0.5.33",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.2",
     "react-dom": "^17.0.2",
+    "react-live-clock": "^5.2.0",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.3.5",
