--- a/view/package.json
+++ b/view/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "dateformat": "^4.5.1",
     "moment-timezone": "^0.5.33",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
