--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "See in License",
+  "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "concurrently": "^6.2.0",
@@ -25,7 +25,6 @@
     "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
     "otp-generator": "^2.0.1",
-    "otp-without-db": "^1.0.4",
-    "uuid": "^8.3.2"
+    "otp-without-db": "^1.0.4"
   }
 }
